appId: com.iosappfactory.rewind
---
- launchApp
- extendedWaitUntil:
    visible:
      id: "add-entry"
    timeout: 15000
- tapOn:
    text: "Settings"
- extendedWaitUntil:
    visible:
      text: "Settings"
    timeout: 5000
- assertVisible:
    text: "Settings"
